--- a/Angular/currency_conversion/src/app/api/api.component.html
+++ b/Angular/currency_conversion/src/app/api/api.component.html
@@ -47,6 +47,6 @@
 
 <div style="display: block; width: 700px">
 
-    <canvas baseChart class="chart" [data]="lineChartData" [options]="lineChartOptions" [type]="lineChartType"
-        (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+    <apx-chart [series]="series" [chart]="chart" [dataLabels]="dataLabels" [markers]="markers" [title]="titleChart"
+        [fill]="fill" [yaxis]="yaxis" [xaxis]="xaxis" [tooltip]="tooltip" [autoUpdateSeries]="true"></apx-chart>
 </div>
