--- a/Angular/currency_conversion/src/app/api/api.component.html
+++ b/Angular/currency_conversion/src/app/api/api.component.html
@@ -5,7 +5,7 @@
         <h4>Select currencies</h4>
         <mat-form-field appearance="fill">
             <mat-label>Currency one</mat-label>
-            <select matNativeControl [(ngModel)]="selectedCurrencyOne" name="currency">
+            <select matNativeControl [(ngModel)]="selectedCurrencyOne" name="currency" (change)="getExchangeData()">
                 <option value="" selected></option>
                 <option *ngFor="let currency of currencies" [value]="currency">
                     {{currency}}
@@ -15,7 +15,7 @@
 
         <mat-form-field appearance="fill">
             <mat-label>Currency two</mat-label>
-            <select matNativeControl [(ngModel)]="selectedCurrencyTwo" name="currency">
+            <select matNativeControl [(ngModel)]="selectedCurrencyTwo" name="currency" (change)="getExchangeData()">
                 <option value="" selected></option>
                 <option *ngFor="let currency of currencies" [value]="currency">
                     {{currency}}
@@ -26,8 +26,8 @@
         <mat-form-field appearance="fill">
             <mat-label>Select a date range</mat-label>
             <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                <input matStartDate formControlName="start" placeholder="Start date">
-                <input matEndDate formControlName="end" placeholder="End date" (dateInput)="getExchangeData()">
+                <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="getExchangeData()">
+                <input matEndDate formControlName="end" placeholder="End date" (dateChange)="getExchangeData()">
             </mat-date-range-input>
             <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
