--- a/Angular/currency_conversion/src/app/api/api.component.html
+++ b/Angular/currency_conversion/src/app/api/api.component.html
@@ -25,7 +25,7 @@
 
         <mat-form-field appearance="fill">
             <mat-label>Select a date range</mat-label>
-            <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+            <mat-date-range-input [formGroup]="range" [rangePicker]="picker" [max]="maxDate">
                 <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="getExchangeData()">
                 <input matEndDate formControlName="end" placeholder="End date" (dateChange)="getExchangeData()">
             </mat-date-range-input>
